--- a/baseConfig.properties
+++ b/baseConfig.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/leyou?serverTimezone=UTC # 连自己的数据库即可
 spring.datasource.username=root
-spring.datasource.password123456
+spring.datasource.password=123456
 foo = bar
